[package]
name = "threatmodels-test-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run_cli_test"
path = "run_cli_test.rs"

[dependencies]
edamame_foundation = { git = "https://github.com/edamametechnologies/edamame_foundation", branch = "main", default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
